<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StrvWeather</string>
    <string name="title_today">Today</string>
    <string name="title_forecast">Forecast</string>
    <string name="title_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="forecast_empty_text">Nothing was loaded</string>
    
    <string name="pref_length_title">Unit of length</string>
    <string name="pref_length_dialog_title">Choose preferred unit of length</string>
    <string name="pref_length_entry_meters">Meters</string>
    <string name="pref_length_entry_miles">Miles</string>
    <string name="pref_temperature_title">Unit of temperature</string>
    <string name="pref_temperature_dialog_title">Choose preferred unit of temperature</string>
    <string name="pref_temperature_entry_celsius">Celsius</string>
    <string name="pref_temperature_entry_fahrenheit">Fahrenheit</string>

    <string name="share_dialog_title">Actions</string>
    <string name="share_dialog_item_simple">Share</string>
    <string name="share_dialog_item_email">Share via E-mail</string>
    <string name="share_dialog_item_sms">Share via SMS</string>
    <string name="share_dialog_chooser_title">Complete action with…</string>
    <string name="share_email_subject">Weather info</string>
    <string name="share_content_text">The forecast for %1$s is: %2$s and %3$s</string>

    <string name="no_internet_title">No internet connection</string>
    <string name="no_internet_open_settings">Open settings</string>

    <string name="error_location">Cannot define current location</string>

    <string name="format_location">%1$s, %2$s</string>
    <string name="format_temperature_celsius">%1$d&#xb0;C | %2$s</string>
    <string name="format_temperature_fahrenheit">%1$d&#xb0;F | %2$s</string>
    <string name="format_temperature_celsius_short">%d&#xb0;C</string>
    <string name="format_temperature_fahrenheit_short">%d&#xb0;F</string>
    <string name="format_humidity">%d%%</string>
    <string name="format_precipitation">%.1f mm</string>
    <string name="format_pressure">%d hPa</string>
    <string name="format_speed_kmph">%d km/h</string>
    <string name="format_speed_miles">%d mi/h</string>

    <!-- Technical fields -->
    <string name="pref_key_length">pref_length</string>
    <string name="pref_key_temperature">pref_temperature</string>
    <string name="pref_length_value_meters">meters</string>
    <string name="pref_length_value_miles">miles</string>
    <string name="pref_temperature_value_celsius">celsius</string>
    <string name="pref_temperature_value_fahrenheit">fahrenheit</string>

</resources>
